--- a/SportEventAppApi/SportEventAppApi.csproj
+++ b/SportEventAppApi/SportEventAppApi.csproj
@@ -17,11 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Managers\Managers.csproj" />
   </ItemGroup>
 
 </Project>
