--- a/SportEventAppApi/appsettings.json
+++ b/SportEventAppApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=DESKTOP-BORRVIJ;Database=SportEventAppTEST;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SqlConnectionString": "Server=DESKTOP-QR36UPA;Database=SportEventAppTEST;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
