--- a/SportEventAppApi/appsettings.json
+++ b/SportEventAppApi/appsettings.json
@@ -2,11 +2,18 @@
   "ConnectionStrings": {
     "SqlConnectionString": "Server=DESKTOP-QR36UPA;Database=SportEventAppTEST1;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning", 
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
   },
   "AllowedHosts": "*"
 }
