fixed initial data

--- a/SportEventAppApi/appsettings.json
+++ b/SportEventAppApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=DESKTOP-QR36UPA;Database=SportEventAppTEST1;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SqlConnectionString": "Server=DESKTOP-BORRVIJ;Database=SportEventAppTEST1;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
